Completes Swagger Documentation
